--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="#mes-projets">Mes Projets</a></li>
                     <li><a href="#mods">Mods</a></li>
                     <li><a href="#repository">Mes travaux</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#anime">Animé</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
             </nav>
@@ -68,9 +68,9 @@
             </article>
 
             <!-- Contact -->
-            <article id="contact">
-                <h2 class="major">Contact</h2>
-                <p>Désolé,il n'y a pas de contact pour l'instant.</p>
+            <article id="anime">
+                <h2 class="major">Animé</h2>
+                <p>J'aime Naruto,Naruto Shippuden,Boruto et My Hero Academia.</p>
 
             </article>
 
