--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <link rel="shortcut_icon" type="image/png" href="images/favicon.png"/>
+    <link rel="shortcut_icon" href="images/favicon.png"/>
 </head>
 
 <body class="is-preload">
