--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </article>
 
             <!-- Contact -->
-            <article id="anime">
-                <h2 class="major">Animé</h2>
-                <p>J'aime Naruto,Naruto Shippuden,Boruto et My Hero Academia.</p>
+            <article id="oregen">
+                <h2 class="major">Ore Gen</h2>
+		    <p>Plus d'information <a href="https://hidrogaming.github.io/oregen/>ici.</a></p>
 
             </article>
 
