--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#mes-projets">Mes Projets</a></li>
                     <li><a href="#mods">Mods</a></li>
                     <li><a href="#repository">Mes travaux</a></li>
-                    <li><a href="#oregen">OreGen</a></li>
+                    <li><a href="#oregen">Oregen</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
             </nav>
