--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Contact -->
             <article id="oregen">
                 <h2 class="major">Ore Gen</h2>
-		    <p>Plus d'information <a href="https://hidrogaming.github.io/oregen/>ici.</a></p>
+		    <p>Plus d'information <a href="https://hidrogaming.github.io/oregen/">ici.</a></p>
 
             </article>
         </div>
