--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#mes-projets">Mes Projets</a></li>
+                    <li><a href="#mes-projets">My Projects</a></li>
                     <li><a href="#mods">Mods</a></li>
-                    <li><a href="#repository">Mes travaux</a></li>
-                    <li><a href="#oregen">Oregen</a></li>
+                    <li><a href="#repository">My Work</a></li>
+                    <li><a href="#oregen">Animes</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
             </nav>
@@ -42,31 +42,31 @@
 
             <!-- Intro -->
             <article id="mes-projets">
-                <h2 class="major">Mes Projets</h2>
+                <h2 class="major">My projects</h2>
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-                <p>Pour l'instant,je ne prévoix pas de faire grand chose appart des tests.</p>
-                <p>Mes language de programmation/code sont le HTML,le Python,le C# et le CSS.</p>
+                <p>I want to do mods/datapack for minecraft.</p>
+                <p>I use the HTML,the Python,the C#, the CSS,the mcfunction and the C (im not very good).</p>
             </article>
 
             <!-- Work -->
             <article id="mods">
                 <h2 class="major">Mods</h2>
                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                <p>J'utilise <a href="https://curseforge.com/minecraft/mc-mods/worldedit">WorldEdit</a>,<a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">MouseTweaks</a>,et <a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium</a>                    </p>
+                <p>I use <a href="https://curseforge.com/minecraft/mc-mods/worldedit">WorldEdit</a>, <a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">MouseTweaks</a> ,and <a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium</a>                    </p>
                 <p></p>
             </article>
 
             <!-- About -->
             <article id="repository">
-                <h2 class="major">Mes travaux</h2>
+                <h2 class="major">My work</h2>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>J'ai fait quelque <a href="https://github.com/HidroGaming?tab=repositories">bidules</a>.</p>
+                <p><a href="https://github.com/HidroGaming?tab=repositories">My work.</a></p>
             </article>
 
             <!-- Contact -->
             <article id="oregen">
-                <h2 class="major">Ore Gen</h2>
-		    <p>Plus d'information <a href="https://hidrogaming.github.io/oregen/">ici.</a></p>
+                <h2 class="major">animes</h2>
+		    <p>I watch <a href="https://en.wikipedia.org/wiki/One_Piece">One Piece</a>, <a href="https://en.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://en.wikipedia.org/wiki/Naruto">Naruto</a> and<a href="https://en.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
 
             </article>
         </div>
