--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content">
                 <div class="inner">
                     <h1>HIDRO</h1>
-                    <p>Un développeur qui aime toujours en savoir plus</p>
+                    <p>A developer who always likes to know more.</p>
                 </div>
             </div>
             <nav>
