--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <link data-rh="true" href="https://raw.githubusercontent.com/HidroGaming/Hidrogaming.github.io/main/images/favicon%20(1).ico" rel="shortcut icon">
+    <link data-rh="true" href="https://raw.githubusercontent.com/HidroGaming/Hidrogaming.github.io/main/images/diamond-icon-isolated-black-background-simple-vector-logo-diamond-icon-isolated-black-background-163197777.ico" rel="shortcut icon">
 </head>
 
 <body class="is-preload">
