--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-
+		<a href="francais.html">Français.</a>
         </footer>
 
     </div>
