--- a/francais.html
+++ b/francais.html
@@ -23,15 +23,15 @@
             <div class="content">
                 <div class="inner">
                     <h1>HIDRO</h1>
-                    <p>A developer who always likes to know more.</p>
+                    <p>Un développeur qui aime en savoir plus.</p>
                 </div>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#mes-projets">My Projects</a></li>
+                    <li><a href="#mes-projets">Mes projets</a></li>
                     <li><a href="#mods">Mods</a></li>
-                    <li><a href="#repository">My Work</a></li>
-                    <li><a href="#oregen">Animes</a></li>
+                    <li><a href="#repository">Mon travail</a></li>
+                    <li><a href="#oregen">Animés</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
             </nav>
