--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <!-- Footer -->
         <footer id="footer">
 		<a href="francais.html">French.</a>
+		<a href="german.html">German.</a>
         </footer>
 
     </div>
