--- a/francais.html
+++ b/francais.html
@@ -74,6 +74,7 @@
         <!-- Footer -->
         <footer id="footer">
 		        <a href="index.html">Anglais.</a>
+		<a href="german.html">Allemand.</a>
         </footer>
 
     </div>
