--- a/francais.html
+++ b/francais.html
@@ -66,7 +66,7 @@
             <!-- Contact -->
             <article id="oregen">
                 <h2 class="major">animes</h2>
-		    <p>Je regarde <a href="https://en.wikipedia.org/wiki/One_Piece">One Piece</a>, <a href="https://en.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://en.wikipedia.org/wiki/Naruto">Naruto</a> and <a href="https://en.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
+		    <p>Je regarde <a href="https://fr.wikipedia.org/wiki/One_Piece">One Piece</a>, <a href="https://fr.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://fr.wikipedia.org/wiki/Naruto">Naruto</a> et <a href="https://fr.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
 
             </article>
         </div>
