--- a/german.html
+++ b/german.html
@@ -66,7 +66,7 @@
             <!-- Contact -->
             <article id="oregen">
                 <h2 class="major">animes</h2>
-		    <p>Ich schaue <a href="https://en.wikipedia.org/wiki/One_Piece">One Piece</a>, <a href="https://en.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://en.wikipedia.org/wiki/Naruto">Naruto</a> und <a href="https://en.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
+		    <p>Ich schaue <a href="https://de.wikipedia.org/wiki/One_Piece_(Anime)">One Piece</a>, <a href="https://de.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://de.wikipedia.org/wiki/Naruto_(Anime)">Naruto</a> und <a href="https://en.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
 
             </article>
         </div>
