--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <footer id="footer">
 		<a href="francais.html">French.</a>
 		<a href="german.html">German.</a>
-		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img href="https://raw.githubusercontent.com/HidroGaming/Hidrogaming.github.io/main/images/logo_github.png"></a>
+		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img src="../images/logo_github.png"></a>
         </footer>
 
     </div>
