--- a/german.html
+++ b/german.html
@@ -74,7 +74,8 @@
         <!-- Footer -->
         <footer id="footer">
 		<a href="francais.html">Französisch.</a>
-    <a href="index.html">Englisch.</a>
+    		<a href="index.html">Englisch.</a>
+		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img src="../images/github_logo.png"></a>
         </footer>
 
     </div>
