--- a/русский.html
+++ b/русский.html
@@ -23,15 +23,15 @@
             <div class="content">
                 <div class="inner">
                     <h1>HIDRO</h1>
-                    <p>A developer who always likes to know more.</p>
+                    <p>Разработчик, который всегда любит знать больше.</p>
                 </div>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#mes-projets">My Projects</a></li>
-                    <li><a href="#mods">Mods</a></li>
-                    <li><a href="#repository">My Work</a></li>
-                    <li><a href="#oregen">Animes</a></li>
+                    <li><a href="#mes-projets">Мои проекты</a></li>
+                    <li><a href="#mods">Моды</a></li>
+                    <li><a href="#repository">Моя работа</a></li>
+                    <li><a href="#oregen">аниме</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
             </nav>
@@ -42,31 +42,31 @@
 
             <!-- Intro -->
             <article id="mes-projets">
-                <h2 class="major">My projects</h2>
+                <h2 class="major">Мои проекты</h2>
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-                <p>I want to do mods/datapack for minecraft.</p>
-                <p>I use the HTML,the Python,the C#, the CSS,the mcfunction and the C (im not very good).</p>
+                <p>Я хочу сделать моды / datapack для Minecraft.</p>
+                <p>Я использую HTML, Python, C#, CSS, mcfunction и C (им не очень хорошо).</p>
             </article>
 
             <!-- Work -->
             <article id="mods">
-                <h2 class="major">Mods</h2>
+                <h2 class="major">Моды</h2>
                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                <p>I use <a href="https://curseforge.com/minecraft/mc-mods/worldedit">WorldEdit</a>, <a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">MouseTweaks</a> ,and <a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium</a>                    </p>
+                <p>Я использую <a href="https://curseforge.com/minecraft/mc-mods/worldedit">WorldEdit</a>, <a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">MouseTweaks</a> ,и <a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium</a>                    </p>
                 <p></p>
             </article>
 
             <!-- About -->
             <article id="repository">
-                <h2 class="major">My work</h2>
+                <h2 class="major">Моя работа</h2>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p><a href="https://github.com/HidroGaming?tab=repositories">My work.</a></p>
+                <p><a href="https://github.com/HidroGaming?tab=repositories">Моя работа.</a></p>
             </article>
 
             <!-- Contact -->
             <article id="oregen">
                 <h2 class="major">animes</h2>
-		    <p>я смотрю <a href="https://ru.wikipedia.org/wiki/One_Piece._Большой_куш">One Piece</a>, <a href="https://en.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://en.wikipedia.org/wiki/Naruto">Naruto</a> and <a href="https://en.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
+		    <p>я смотрю <a href="https://ru.wikipedia.org/wiki/One_Piece._Большой_куш">One Piece</a>, <a href="https://ru.wikipedia.org/wiki/My_Hero_Academia">My Hero Academia</a>, <a href="https://ru.wikipedia.org/wiki/Naruto">Naruto</a> и <a href="https://ru.wikipedia.org/wiki/Naruto_Shippuden">Naruto Shippuden</a></p>
 
             </article>
         </div>
