--- a/francais.html
+++ b/francais.html
@@ -75,6 +75,7 @@
         <footer id="footer">
 		        <a href="index.html">Anglais.</a>
 		<a href="german.html">Allemand.</a>
+		<a href="русский.html">Russe.</a>
 		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img src="../images/github_logo.png"></a>
         </footer>
 
