--- a/german.html
+++ b/german.html
@@ -75,6 +75,7 @@
         <footer id="footer">
 		<a href="francais.html">Französisch.</a>
     		<a href="index.html">Englisch.</a>
+		<a href="русский.html">Russisch.</a>
 		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img src="../images/github_logo.png"></a>
         </footer>
 
