--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <article id="repository">
                 <h2 class="major">My work</h2>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p><a href="https://github.com/HidroGaming?tab=repositories">GitHub.</a><a href="hidrogaming.itch.io">Itch</a></p>
+                <p><a href="https://github.com/HidroGaming?tab=repositories">GitHub.</a><a href="Https://hidrogaming.itch.io">Itch</a></p>
             </article>
 
             <!-- Contact -->
