--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<a href="francais.html">French.</a>
 		<a href="german.html">German.</a>
 		<a href="русский.html">Russian.</a>
+		<a href="عربى.html">Arabic.</a>
 		<a href="https://github.com/HidroGaming/hidrogaming.github.io" target="_blank"><img src="../images/github_logo.png"></a>
         </footer>
 
