--- a/bot.html
+++ b/bot.html
@@ -1,1 +1,4 @@
-
+<DOCTYPE html>
+<html>
+  <li><a href="https://discord.com/api/oauth2/authorize?client_id=920398688633888798&permissions=8&scope=bot">redirect</a></li>
+  </html>
