--- a/bot.html
+++ b/bot.html
@@ -1,4 +1,12 @@
 <DOCTYPE html>
 <html>
+  <head>
+    <title>Hidro</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link data-rh="true" href="https://raw.githubusercontent.com/HidroGaming/Hidrogaming.github.io/main/images/diamond-icon-isolated-black-background-simple-vector-logo-diamond-icon-isolated-black-background-163197777.ico" rel="shortcut icon">
+</head>
+  <body>
   <li><a href="https://discord.com/api/oauth2/authorize?client_id=920398688633888798&permissions=8&scope=bot">redirect</a></li>
-  </html>
+  </body>
+    </html>
