--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1; URL=http://www.hidrogaming.github.io/scripts/main.lua">
+<meta http-equiv="refresh" content="1; URL=http://hidrogaming.github.io/scripts/main.lua">
